# drogon-admin

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_vs.bat  vcpkg.json
.github/workflows/: backend.yml  frontend.yml
config/: config.json
front/: package-lock.json  package.json  vite.config.ts
front/src/: App.css  App.tsx  api.ts  index.css
front/src/api/: auth.ts  http.ts  index.ts  menu.ts  permission.ts  role.ts  types.ts  user.ts
front/src/components/: AppHeader.tsx  DynamicMenu.tsx  HasPerm.tsx
front/src/context/: AuthContext.tsx
front/src/hooks/: useAuth.ts  useDevice.ts
front/src/layouts/: AdminLayout.tsx
front/src/pages/: AppRoutes.tsx
front/src/pages/auth/: AuthPage.tsx  (+3 more)
front/src/routes/: ProtectedRoute.tsx  index.tsx
front/src/theme/: index.ts
front/src/utils/: remember.ts
sql/: schema.sql
src/: main.cc
src/common/: CryptoUtil.h  JwtUtil.h  TimeUtil.h
src/core/: Bootstrap.cc  Bootstrap.h  Logger.h  Result.h
src/filters/: AuthFilter.cc  AuthFilter.h  CorsFilter.cc  CorsFilter.h  PermissionFilter.cc  PermissionFilter.h  PermissionRegistry.cc  PermissionRegistry.h
src/modules/rbac/: MenuController.cc  MenuController.h  PermissionController.cc  PermissionController.h  RbacRepository.cc  RbacRepository.h  RbacService.cc  RbacService.h  RoleController.cc  RoleController.h
src/modules/user/: UserController.cc  UserController.h  UserRepository.cc  UserRepository.h  UserService.cc  UserService.h
src/plugins/: ConfigPlugin.cc  ConfigPlugin.h
triplets/: arm64-osx.cmake  x64-linux.cmake  x64-windows-static-md.cmake
(+16 files in other folders)
